# GOST-34112018-STREEBOG-HW

./: .gitmodules  README.md  verilator.cfg
src/: p_transform.sv
systemc/: CMakeLists.txt
systemc/res/include/: gost34112018.h
systemc/src/: build.cxx  common.cxx  common.hxx  control_logic.cxx  control_logic.hxx  datatypes.hxx  gost34112018_hw.cxx  gost34112018_hw.hxx  payloads.hxx  stage.cxx  stage.hxx  stage2.cxx  tb.cxx  transformations.cxx  transformations.hxx  utils.cxx  utils.hxx
systemverilog/: verilator.cfg
systemverilog/src/: tb.sv
verilog/: Makefile  run.sh  verilator.cfg
verilog/mem/: sl_table.mem
verilog/rtl/: strhw.sv  strhw_adder512.sv  strhw_alg_state_if.sv  strhw_base_if.sv  strhw_common_types.sv  strhw_control_logic.sv  strhw_data_if.sv  strhw_gn.sv  strhw_p.sv  strhw_sl.sv  strhw_sl_table.sv  strhw_stage.sv  tb.sv
verilog/tb/: tb.sv
